# libwmp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.hpp.in
examples/: CMakeLists.txt  wmp_example_log.cpp
include/wmp/: log.hpp
source/wmp/: log.cpp
